--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
     <div id="result4"></div>
     <hr style="border: none; height: 3px; background-color: rgb(5, 5, 5);">
     <!-- .................................. -->
-     
+    <!-- Randomly generate an array and then create a function to pick 1st and last element of that generated array.. -->
+    <h2>Random Array Generator</h2>
+  <button onclick="runDemo()">Generate Random Array</button>
+  <pre id="output"></pre>
     
 </body>
 </html>
