--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
     <h2>Random Array Generator</h2>
   <button onclick="runDemo()">Generate Random Array</button>
   <pre id="output"></pre>
-    
+  <hr style="border: none; height: 3px; background-color: rgb(5, 5, 5);">
+    <!-- ................................ -->
+    <h2>Simple Addition Calculator</h2>
+    <input type="number" id="num1" placeholder="Enter first number">
+    +
+    <input type="number" id="num2" placeholder="Enter second number">
+    =
+    <input type="text" id="result7" placeholder="Result" readonly>
 </body>
 </html>
